components/ua/user-exchange-publisher/overlays/prod/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-exchange-publisher
spec:
  template:
    spec:
      containers:
        - name: user-exchange-publisher
          image: ghcr.io/isisbusapps/merge-user-tool/user-exchange-publisher@sha256:22746451e74afe5cbdfac6033fafcddbe40913ff2b870faa52df3e3a643be312
